--- a/src/styles/components/accounts.scss
+++ b/src/styles/components/accounts.scss
@@ -1,3 +1,7 @@
+.card__title-buttons {
+  display: grid;
+  grid-template-columns: 60% 20% 20%;
+}
 .card__description {
   display: flex;
   justify-content: space-between;
